@@ -79,11 +79,61 @@ Usually appears in the form of a function parameter
 
 ---
 
+# Examples
+
+* We will look at different forms of polymorphism
+* Implemented in different languages:
+
+---
+
+# Java
+
+(_without reflection_)
+![bg fit left](TIJava4cover.jpg)
+![bg fit left](OnJava8Cover.jpg)
+
+---
+
 # C++
 
 ![bg fit right](eckel-c-front-cover-only.jpg)
 
 ---
+
+# Kotlin
+
+![bg fit right](AtomicKotlinCover.png)
+
+---
+
+![bg](Scala.jpg)
+![bg fit](AtomicScala.jpg)
+
+---
+
+# Python, Rust, Go
+
+---
+
+# Ad-Hoc Polymorphism (Overloading)
+
+```kt
+//: src/kotlin/src/main/kotlin/AdHoc.kt
+
+fun f(s: String) {
+    println("f(String): $s")
+}
+
+fun f(i: Int) {
+    println("f(Int): $i")
+}
+
+fun main() {
+    f("hi")
+    f(12)
+}
+```
+------
 
 ```cpp
 //: src/cpp/AdHoc.cpp
@@ -104,6 +154,279 @@ int main() {
     f("x");
     f(1.0);
 }
+```
+------
+
+```java
+//: src/java/src/DisjointTypes.java
+
+class Dog {
+  void eat() {
+    System.out.println("eating dog food");
+  }
+  void bark() {
+    System.out.println("woof");
+  }
+}
+
+class Person {
+  void scarf() {
+    System.out.println("eating pizza");
+  }
+  void greet() {
+    System.out.println("hello");
+  }
+}
+```
+---
+```java
+class Robot {
+  void charge() {
+    System.out.println("charging");
+  }
+  void initiate() {
+    System.out.println("operational");
+  }
+}
+
+class Slug {
+  void absorb() {
+    System.out.println("eating grass");
+  }
+}
+```
+---
+```java
+public class DisjointTypes {
+  static void nourish(Dog subject) {
+    subject.eat();
+    subject.bark();
+  }
+  static void nourish(Person subject) {
+    subject.scarf();
+    subject.greet();
+  }
+  static void nourish(Robot subject) {
+    subject.charge();
+    subject.initiate();
+  }
+```
+---
+```java
+  static void nourish(Slug subject) {
+    subject.absorb();
+  }
+  public static void main(String... args) {
+    // Ad-hoc polymorphism (overloading):
+    nourish(new Dog());
+    nourish(new Person());
+    nourish(new Robot());
+    nourish(new Slug());
+    // (Statically determined at compile time)
+  }
+}
+```
+------
+
+```py
+#: src/python/disjoint_types.py
+class Dog:
+    def eat(self): print("eating dog food")
+    def bark(self): print("woof")
+
+class Person:
+    def eat(self): print("eating pizza")
+    def greet(self): print("hello")
+
+class Robot:
+    def eat(self): print("charging")
+    def initiate(self): print("operational")
+
+class Slug:
+    def eat(self): print("eating grass")
+```
+------
+
+```py
+#: src/python/single_dispatch.py
+from functools import singledispatch
+from disjoint_types import Dog, Person, Robot, Slug
+
+@singledispatch
+def nourish(subject):
+    print("default nourish")
+
+@nourish.register
+def _(subject: Dog):
+    subject.eat()
+    subject.bark()
+
+@nourish.register
+def _(subject: Person):
+    subject.eat()
+    subject.greet()
+```
+---
+```py
+@nourish.register
+def _(subject: Robot):
+    subject.eat()
+    subject.initiate()
+
+@nourish.register
+def _(subject: Slug):
+    subject.eat()
+
+if __name__ == '__main__':
+    for subject in [Dog(), Person(), Robot(), Slug(), ""]:
+        nourish(subject)
+```
+------
+
+
+# Classic Inheritance/Liskov Substitution
+
+---
+
+```java
+//: src/java/src/Inheritance.java
+package inheritance;
+import java.util.stream.*;
+
+abstract class Base {
+  abstract void eat();
+  abstract void speak();
+}
+
+class Dog extends Base {
+  @Override void eat() {
+    System.out.println("eating dog food");
+  }
+  @Override void speak() {
+    System.out.println("woof");
+  }
+}
+```
+---
+```java
+class Person extends Base {
+  @Override void eat() {
+    System.out.println("eating pizza");
+  }
+  @Override void speak() {
+    System.out.println("hello");
+  }
+}
+
+class Robot extends Base {
+  @Override void eat() {
+    System.out.println("charging");
+  }
+  @Override void speak() {
+    System.out.println("operational");
+  }
+}
+```
+---
+```java
+class Slug extends Base {
+  @Override void eat() {
+    System.out.println("eating grass");
+  }
+  @Override void speak() {
+  }
+}
+
+public class Inheritance {
+  static void nourish(Base subject) {
+    subject.eat();
+    subject.speak();
+  }
+  public static void main(String... args) {
+    Stream.of(
+        new Dog(), new Person(), new Robot(), new Slug()
+    ).forEach(Inheritance::nourish);
+  }
+}
+```
+------
+
+```kt
+//: src/kotlin/src/main/kotlin/Inheritance.kt
+package inheritance
+
+interface Base {
+    abstract fun eat()
+    abstract fun speak()
+}
+
+class Dog: Base {
+    override fun eat() { println("eating dog food") }
+    override fun speak() { println("woof") }
+}
+
+class Person: Base {
+    override fun eat() { println("eating pizza") }
+    override fun speak() { println("hello") }
+}
+```
+---
+```kt
+class Robot: Base {
+    override fun eat() { println("charging") }
+    override fun speak() { println("operational") }
+}
+
+class Slug: Base {
+    override fun eat() { println("eating grass") }
+    override fun speak() { }
+}
+
+fun nourish(subject: Base) {
+    subject.eat()
+    subject.speak()
+}
+
+fun main() {
+    listOf(
+        Dog(), Person(), Robot(), Slug()
+    ).forEach { nourish(it) }
+}
+```
+------
+
+```scala
+//: src/scala/Inheritance.scala
+package inheritance
+
+trait Base:
+    def consume(): Unit
+    def communicate(): Unit
+
+class Dog extends Base:
+    def consume() = println("eating dog food")
+    def communicate() = println("woof")
+
+class Person extends Base:
+    def consume() = println("eating pizza")
+    def communicate() = println("hello")
+```
+---
+```scala
+class Robot extends Base:
+    def consume() = println("charging")
+    def communicate() = println("operational")
+
+class Slug extends Base:
+    def consume() = println("eating grass")
+    def communicate() = {}
+
+def nourish(x: Base): Unit =
+    x.consume()
+    x.communicate()
+
+@main def main() =
+    List(Dog(), Person(), Robot(), Slug()).foreach(nourish(_))
 ```
 ------
 
@@ -158,6 +481,100 @@ int main() {
 }
 ```
 ------
+
+```py
+#: src/python/base.py
+from abc import ABC, abstractmethod
+
+class Base(ABC):
+    @abstractmethod
+    def eat(self) -> None: ...
+    @abstractmethod
+    def speak(self) -> None: ...
+```
+------
+
+```py
+#: src/python/inheritance.py
+from base import Base
+
+class Dog(Base):
+    def eat(self): print("eating dog food")
+    def speak(self): print("woof")
+
+class Person(Base):
+    def eat(self): print("eating pizza")
+    def speak(self): print("hello")
+```
+---
+```py
+class Robot(Base):
+    def eat(self): print("charging")
+    def speak(self): print("operational")
+
+class Slug(Base):
+    def eat(self): print("eating grass")
+    def speak(self): pass
+
+def nourish(subject: Base):
+    subject.eat()
+    subject.speak()
+
+if __name__ == '__main__':
+    for subject in [Dog(), Person(), Robot(), Slug()]:
+        nourish(subject)
+```
+------
+
+```rs
+//: src/rust/inheritance/src/main.rs
+
+trait Base {
+  fn eat(&self);
+  fn speak(&self);
+}
+
+struct Dog;
+struct Person;
+struct Robot;
+struct Slug;
+
+impl Base for Dog {
+  fn eat(&self) { println!("eating dog food"); }
+  fn speak(&self) { println!("woof"); }
+}
+
+impl Base for Person {
+  fn eat(&self) { println!("eating pizza"); }
+  fn speak(&self) { println!("hello"); }
+}
+```
+---
+```rs
+impl Base for Robot {
+  fn eat(&self) { println!("charging"); }
+  fn speak(&self) { println!("operational"); }
+}
+
+impl Base for Slug {
+  fn eat(&self) { println!("eating grass"); }
+  fn speak(&self) {}
+}
+
+fn main() {
+  let v: Vec<&dyn Base> = vec![&Dog{}, &Person{}, &Robot{}, &Slug{}];
+  for d in v.iter() {
+    d.eat();
+    d.speak();
+  }
+}
+```
+------
+
+
+# Multiple Inheritance
+
+---
 
 ```cpp
 //: src/cpp/MultipleInheritance.cpp
@@ -239,6 +656,224 @@ int main() {
 ```
 ------
 
+```py
+#: src/python/multiple_inheritance.py
+from base import Base
+from disjoint_types import Dog, Person, Robot, Slug
+
+class Dog2(Dog, Base):
+    def eat(self) -> None: super().eat()
+    def speak(self) -> None: self.bark()
+
+class Person2(Person, Base):
+    def eat(self) -> None: super().eat()
+    def speak(self) -> None: self.greet()
+
+class Robot2(Robot, Base):
+    def eat(self) -> None: super().eat()
+    def speak(self) -> None: self.initiate()
+
+class Slug2(Slug, Base):
+    def eat(self) -> None: super().eat()
+    def speak(self) -> None: pass  # Required by ABC
+```
+---
+```py
+def nourish(base: Base):
+    base.eat()
+    base.speak()
+
+if __name__ == '__main__':
+    for subject in [Dog2(), Person2(), Robot2(), Slug2()]:
+        nourish(subject)
+```
+------
+
+
+# Parametric Polymorphism
+
+---
+
+```java
+//: src/java/src/Generics.java
+package generics;
+
+class Holder<T> {
+  private T value = null;
+  void set(T x) { value = x;}
+  T get() { return value; }
+}
+
+abstract class Base {
+  abstract void speak();
+}
+
+class Dog extends Base {
+  @Override
+  void speak() {
+    System.out.println("woof");
+  }
+}
+```
+---
+```java
+class Person extends Base {
+  @Override
+  void speak() {
+    System.out.println("hello");
+  }
+}
+
+public class Generics {
+  public static void main(String... args) {
+    var dogHolder = new Holder<Dog>();
+    dogHolder.set(new Dog());
+    Dog d = dogHolder.get();
+    var baseHolder = new Holder<Base>();
+    baseHolder.set(new Dog());
+    baseHolder.set(new Person());
+    // Person p = baseHolder.get();  // Nope
+    Base b = baseHolder.get();
+    // Need to add variance here...
+  }
+}
+```
+------
+
+```kt
+//: src/kotlin/src/main/kotlin/ReifiedGenerics.kt
+package reifiedgenerics
+
+class Dog {
+    fun eat() = println("eating dog food")
+    fun bark() = println("woof")
+}
+
+class Person {
+    fun scarf() = println("eating pizza")
+    fun greet() = println("hello")
+}
+
+class Robot {
+    fun charge() = println("charging")
+    fun initiate() = println("operational")
+}
+
+class Slug {
+    fun absorb() = println("eating grass")
+}
+```
+---
+```kt
+inline fun <reified T> nourish(subject: T) {
+    when (subject) {
+        is Dog -> {
+            subject.eat()
+            subject.bark()
+        }
+        is Person -> {
+            subject.scarf()
+            subject.greet()
+        }
+        is Robot -> {
+            subject.charge()
+            subject.initiate()
+        }
+        is Slug -> {
+            subject.absorb()
+        }
+    }
+}
+```
+---
+```kt
+fun main() {
+    listOf(
+        Dog(), Person(), Robot(), Slug()
+    ).forEach { nourish(it) }
+}
+```
+------
+
+```go
+//: src/golang/generic/generics.go
+package main
+
+type Dog struct{}
+
+func (dog Dog) Eat()  { println("eating dog food") }
+func (dog Dog) Bark() { println("woof") }
+
+type Person struct{}
+
+func (person Person) Eat()   { println("eating pizza") }
+func (person Person) Greet() { println("hello") }
+```
+---
+```go
+type Robot struct{}
+
+func (robot Robot) Eat()      { println("charging") }
+func (robot Robot) Initiate() { println("operational") }
+
+type Slug struct{}
+
+func (slug Slug) Eat() { println("eating grass") }
+```
+---
+```go
+type Eater interface {
+    Eat()
+}
+
+func Poly[T Dog | Person | Robot | Slug](subject T) {
+    switch subjectTyped := any(subject).(type) {
+    case Eater:
+        subjectTyped.Eat()
+    }
+    switch subjectTyped := any(subject).(type) {
+    case Dog:
+        subjectTyped.Bark()
+    case Person:
+        subjectTyped.Greet()
+    case Robot:
+        subjectTyped.Initiate()
+    }
+}
+```
+---
+```go
+func main() {
+    Poly(Dog{})
+    Poly(Person{})
+    Poly(Robot{})
+    Poly(Slug{})
+}
+```
+------
+
+
+# Structural Typing aka Duck Typing
+
+---
+
+```py
+#: src/python/duck_typing.py
+from disjoint_types import Dog, Person, Robot, Slug
+
+def nourish(subject):
+    subject.eat()  # Duck typing
+    if type(subject) is Dog: subject.bark()
+    if type(subject) is Person: subject.greet()
+    if type(subject) is Robot: subject.initiate()
+
+if __name__ == '__main__':
+    for subject in [Dog(), Person(), Robot(), Slug()]:
+        nourish(subject)
+        # nourish("")  # Runtime error
+```
+------
+
 ```cpp
 //: src/cpp/StructuralTyping.cpp
 #include <variant>  // C++ 17
@@ -306,320 +941,36 @@ int main() {
 ------
 
 
-# Java
-
-(_without reflection_)
-![bg fit left](TIJava4cover.jpg)
-![bg fit left](OnJava8Cover.jpg)
+# Disjoint Types
 
 ---
 
-```java
-//: src/java/src/Inheritance.java
-package inheritance;
-import java.util.stream.*;
+```scala
+//: src/scala/DisjointTypes.scala
+// Nothing in commont
+package disjointtypes
 
-abstract class Base {
-  abstract void eat();
-  abstract void speak();
-}
-
-class Dog extends Base {
-  @Override
-  void eat() {
-    System.out.println("eating dog food");
-  }
-  @Override
-  void speak() {
-    System.out.println("woof");
-  }
-}
-```
----
-```java
-class Person extends Base {
-  @Override
-  void eat() {
-    System.out.println("eating pizza");
-  }
-  @Override
-  void speak() {
-    System.out.println("hello");
-  }
-}
-
-class Robot extends Base {
-  @Override
-  void eat() {
-    System.out.println("charging");
-  }
-  @Override
-  void speak() {
-    System.out.println("operational");
-  }
-}
-```
----
-```java
-class Slug extends Base {
-  @Override
-  void eat() {
-    System.out.println("eating grass");
-  }
-  @Override
-  void speak() {
-  }
-}
-
-public class Inheritance {
-  static void nourish(Base subject) {
-    subject.eat();
-    subject.speak();
-  }
-  public static void main(String... args) {
-    Stream.of(
-        new Dog(), new Person(), new Robot(), new Slug()
-    ).forEach(Inheritance::nourish);
-  }
-}
-```
-------
-
-```java
-//: src/java/src/DisjointTypes.java
-import java.util.stream.*;
-
-class Dog {
-  void eat() {
-    System.out.println("eating dog food");
-  }
-  void bark() {
-    System.out.println("woof");
-  }
-}
-
-class Person {
-  void eat() {
-    System.out.println("eating pizza");
-  }
-  void greet() {
-    System.out.println("hello");
-  }
-}
-```
----
-```java
-class Robot {
-  void eat() {
-    System.out.println("charging");
-  }
-  void initiate() {
-    System.out.println("operational");
-  }
-}
-
-class Slug {
-  void eat() {
-    System.out.println("eating grass");
-  }
-}
-```
----
-```java
-public class DisjointTypes {
-  static void nourish(Dog subject) {
-    subject.eat();
-    subject.bark();
-  }
-  static void nourish(Person subject) {
-    subject.eat();
-    subject.greet();
-  }
-  static void nourish(Robot subject) {
-    subject.eat();
-    subject.initiate();
-  }
-```
----
-```java
-  static void nourish(Slug subject) {
-    subject.eat();
-  }
-  public static void main(String... args) {
-    // Ad-hoc polymorphism (overloading):
-    nourish(new Dog());
-    nourish(new Person());
-    nourish(new Robot());
-    nourish(new Slug());
-    // (Statically determined at compile time)
-  }
-}
-```
-------
-
-```java
-//: src/java/src/Generics.java
-package generics;
-
-class Holder<T> {
-  private T value = null;
-  void set(T x) { value = x;}
-  T get() { return value; }
-}
-
-abstract class Base {
-  abstract void speak();
-}
-
-class Dog extends Base {
-  @Override
-  void speak() {
-    System.out.println("woof");
-  }
-}
-```
----
-```java
-class Person extends Base {
-  @Override
-  void speak() {
-    System.out.println("hello");
-  }
-}
-
-public class Generics {
-  public static void main(String... args) {
-    var dogHolder = new Holder<Dog>();
-    dogHolder.set(new Dog());
-    Dog d = dogHolder.get();
-    var baseHolder = new Holder<Base>();
-    baseHolder.set(new Dog());
-    baseHolder.set(new Person());
-    // Person p = baseHolder.get();  // Nope
-    Base b = baseHolder.get();
-    // Need variance...
-  }
-}
-```
-------
-
-
-# Python
-
----
-
-```py
-#: src/python/base.py
-from abc import ABC, abstractmethod
-
-class Base(ABC):
-    @abstractmethod
-    def eat(self) -> None: ...
-    @abstractmethod
-    def speak(self) -> None: ...
-```
-------
-
-```py
-#: src/python/inheritance.py
-from base import Base
-
-class Dog(Base):
-    def eat(self): print("eating dog food")
-    def speak(self): print("woof")
-
-class Person(Base):
-    def eat(self): print("eating pizza")
-    def speak(self): print("hello")
-```
----
-```py
-class Robot(Base):
-    def eat(self): print("charging")
-    def speak(self): print("operational")
-
-class Slug(Base):
-    def eat(self): print("eating grass")
-    def speak(self): pass
-
-def nourish(subject: Base):
-    subject.eat()
-    subject.speak()
-
-if __name__ == '__main__':
-    for subject in [Dog(), Person(), Robot(), Slug()]:
-        nourish(subject)
-```
-------
-
-```py
-#: src/python/disjoint_types.py
 class Dog:
-    def eat(self): print("eating dog food")
-    def bark(self): print("woof")
+    def eat() = println("eating dog food")
+    def bark() = println("woof")
 
 class Person:
-    def eat(self): print("eating pizza")
-    def greet(self): print("hello")
+    def scarf() = println("eating pizza")
+    def talk() = println("hello")
 
 class Robot:
-    def eat(self): print("charging")
-    def initiate(self): print("operational")
+    def charge() = println("charging")
+    def communicate() = println("operational")
 
 class Slug:
-    def eat(self): print("eating grass")
+    def absorb() = println("eating grass")
 ```
 ------
 
-```py
-#: src/python/multiple_inheritance.py
-from base import Base
-from disjoint_types import Dog, Person, Robot, Slug
 
-class Dog2(Dog, Base):
-    def eat(self) -> None: super().eat()
-    def speak(self) -> None: self.bark()
+# Union Types aka Sum Types
 
-class Person2(Person, Base):
-    def eat(self) -> None: super().eat()
-    def speak(self) -> None: self.greet()
-
-class Robot2(Robot, Base):
-    def eat(self) -> None: super().eat()
-    def speak(self) -> None: self.initiate()
-
-class Slug2(Slug, Base):
-    def eat(self) -> None: super().eat()
-    def speak(self) -> None: pass  # Required by ABC
-```
 ---
-```py
-def nourish(base: Base):
-    base.eat()
-    base.speak()
-
-if __name__ == '__main__':
-    for subject in [Dog2(), Person2(), Robot2(), Slug2()]:
-        nourish(subject)
-```
-------
-
-```py
-#: src/python/duck_typing.py
-from disjoint_types import Dog, Person, Robot, Slug
-
-def nourish(subject):
-    subject.eat()  # Duck typing
-    if type(subject) is Dog: subject.bark()
-    if type(subject) is Person: subject.greet()
-    if type(subject) is Robot: subject.initiate()
-
-if __name__ == '__main__':
-    for subject in [Dog(), Person(), Robot(), Slug()]:
-        nourish(subject)
-        # nourish("")  # Runtime error
-```
-------
 
 ```py
 #: src/python/union_types.py
@@ -638,6 +989,78 @@ if __name__ == '__main__':
     # nourish("")  # Type-check error
 ```
 ------
+
+```scala
+//: src/scala/UnionTypes.scala
+// Union types aka sum types
+package uniontypes
+import disjointtypes.*
+
+// 'x' is a union type:
+def nourish(x: Dog | Person | Robot | Slug) = x match
+    case d: Dog =>
+        d.eat()
+        d.bark()
+    case p: Person =>
+        p.scarf()
+        p.talk()
+    case r: Robot =>
+        r.charge()
+        r.communicate()
+    case s: Slug =>
+        s.absorb()
+
+@main def main() =
+    val list: List[Dog | Person | Robot | Slug] =
+        List(Dog(), Person(), Robot(), Slug())
+    list.foreach(nourish(_))
+```
+------
+
+```java
+// src/java/src/PatternMatching.java
+// {NewFeature} Preview in JDK 17
+// Compile with javac flags:
+//   --enable-preview --source 17
+import java.util.List;
+
+class Hedgehog {
+  void groom() {}
+  void walk() {}
+}
+
+class Fish {
+  void feed() {}
+  void changeWater() {}
+}
+
+public class PatternMatching {
+  static void careFor(Object p) {
+    switch(p) { // Exhaustive except for Null
+      case Hedgehog d -> {
+        d.groom();
+        d.walk();
+      }
+      case Fish f -> {
+        f.feed();
+        f.changeWater();
+      }
+      // case null -> {} // Not required
+      case default -> {}
+    };
+  }
+  public static void main(String... args) {
+    List.of(new Hedgehog(), new Fish())
+        .forEach(PatternMatching::careFor);
+  }
+}
+```
+------
+
+
+# Protocols
+
+---
 
 ```py
 #: src/python/protocols.py
@@ -675,163 +1098,135 @@ if __name__ == '__main__':
 ```
 ------
 
-```py
-#: src/python/single_dispatch.py
-from functools import singledispatch
-from disjoint_types import Dog, Person, Robot, Slug
+```go
+//: src/golang/structural/structural.go
+package main
 
-@singledispatch
-def nourish(subject):
-    print("default nourish")
+type Dog struct{}
 
-@nourish.register
-def _(subject: Dog):
-    subject.eat()
-    subject.bark()
+func (dog Dog) Consume()     { println("eating dog food") }
+func (dog Dog) Communicate() { println("woof") }
 
-@nourish.register
-def _(subject: Person):
-    subject.eat()
-    subject.greet()
+type Person struct{}
+
+func (person Person) Consume()     { println("eating pizza") }
+func (person Person) Communicate() { println("hello") }
 ```
 ---
-```py
-@nourish.register
-def _(subject: Robot):
-    subject.eat()
-    subject.initiate()
+```go
+type Robot struct{}
 
-@nourish.register
-def _(subject: Slug):
-    subject.eat()
+func (robot Robot) Consume()     { println("charging") }
+func (robot Robot) Communicate() { println("operational") }
 
-if __name__ == '__main__':
-    for subject in [Dog(), Person(), Robot(), Slug(), ""]:
-        nourish(subject)
-```
-------
+type Slug struct{}
 
-
-# Kotlin
-
-![bg fit right](AtomicKotlinCover.png)
-
----
-
-```kt
-//: src/kotlin/src/main/kotlin/AdHoc.kt
-
-fun f(s: String) {
-    println("f(String): $s")
-}
-
-fun f(i: Int) {
-    println("f(Int): $i")
-}
-
-fun main() {
-    f("hi")
-    f(12)
-}
-```
-------
-
-```kt
-//: src/kotlin/src/main/kotlin/Inheritance.kt
-package inheritance
-
-interface Base {
-    abstract fun eat()
-    abstract fun speak()
-}
-
-class Dog: Base {
-    override fun eat() { println("eating dog food") }
-    override fun speak() { println("woof") }
-}
-
-class Person: Base {
-    override fun eat() { println("eating pizza") }
-    override fun speak() { println("hello") }
-}
+func (slug Slug) Consume()     { println("eating grass") }
+func (slug Slug) Communicate() {}
 ```
 ---
-```kt
-class Robot: Base {
-    override fun eat() { println("charging") }
-    override fun speak() { println("operational") }
+```go
+type ConsumerCommunicator interface {
+    Consume()
+    Communicate()
 }
 
-class Slug: Base {
-    override fun eat() { println("eating grass") }
-    override fun speak() { }
+func Poly(x ConsumerCommunicator) {
+    x.Consume()
+    x.Communicate()
 }
 
-fun nourish(subject: Base) {
-    subject.eat()
-    subject.speak()
-}
-
-fun main() {
-    listOf(
-        Dog(), Person(), Robot(), Slug()
-    ).forEach { nourish(it) }
-}
-```
-------
-
-```kt
-//: src/kotlin/src/main/kotlin/ReifiedGenerics.kt
-package reifiedgenerics
-
-class Dog {
-    fun eat() = println("eating dog food")
-    fun bark() = println("woof")
-}
-
-class Person {
-    fun scarf() = println("eating pizza")
-    fun greet() = println("hello")
-}
-
-class Robot {
-    fun charge() = println("charging")
-    fun initiate() = println("operational")
-}
-
-class Slug {
-    fun absorb() = println("eating grass")
-}
-```
----
-```kt
-inline fun <reified T> nourish(subject: T) {
-    when (subject) {
-        is Dog -> {
-            subject.eat()
-            subject.bark()
-        }
-        is Person -> {
-            subject.scarf()
-            subject.greet()
-        }
-        is Robot -> {
-            subject.charge()
-            subject.initiate()
-        }
-        is Slug -> {
-            subject.absorb()
-        }
+func main() {
+    subjects := []ConsumerCommunicator{
+        Dog{}, Person{}, Robot{}, Slug{},
+    }
+    for _, subject := range subjects {
+        Poly(subject)
     }
 }
 ```
+------
+
+
+# Algebraic Data Types (ADTs)
+
 ---
-```kt
-fun main() {
-    listOf(
-        Dog(), Person(), Robot(), Slug()
-    ).forEach { nourish(it) }
-}
+
+```scala
+//: src/scala/EnumeratedDataTypes.scala
+// Enumerated Data Types
+package enumtypes
+import EnumType.*
+
+enum EnumType:
+    case Dog, Person, Robot, Slug
+    def consume() = this match
+        case Dog => println("eating dog food")
+        case Person => println("eating pizza")
+        case Robot => println("charging")
+        case Slug => println("eating grass")
+    def communicate() = this match
+        case Dog => println("woof")
+        case Person => println("hello")
+        case Robot => println("operational")
+        case Slug => ()
+```
+---
+```scala
+def nourish(x: EnumType): Unit =
+    x.consume()
+    x.communicate()
+
+@main def main() =
+    List(Dog, Person, Robot, Slug).foreach(nourish(_))
+```
+------
+
+```scala
+//: src/scala/EnumeratedDataTypes2.scala
+package enumtypes2
+import EnumType.*
+
+enum EnumType(eat: String, talk: String):
+    case Dog extends EnumType("eating dog food", "woof")
+    case Person extends EnumType("eating pizza", "hello")
+    case Robot extends EnumType("charging", "operational")
+    case Slug extends EnumType("eating grass", "")
+    def consume() = println(eat)
+    def communicate() = println(talk)
+```
+---
+```scala
+def nourish(x: EnumType): Unit =
+    x.consume()
+    x.communicate()
+
+@main def main() =
+    List(Dog, Person, Robot, Slug).foreach(nourish(_))
+```
+------
+
+```scala
+//: src/scala/AlgebraicDataTypes.scala
+package adts
+import ADT.*
+
+enum ADT(eat: String, talk: String):
+    case Dog(says: String) extends ADT("eating dog food", says)
+    case Person(says: String) extends ADT("eating pizza", says)
+    case Robot extends ADT("charging", "operational")
+    case Slug extends ADT("eating grass", "")
+    def consume() = println(eat)
+    def communicate() = println(talk)
+```
+---
+```scala
+def nourish(x: ADT): Unit =
+    x.consume()
+    x.communicate()
+
+@main def main() =
+    List(Dog("woof"), Person("hi!"), Robot, Slug).foreach(nourish(_))
 ```
 ------
 
@@ -875,120 +1270,9 @@ fun main() = listOf(
 ------
 
 
-![bg](Scala.jpg)
-![bg fit](AtomicScala.jpg)
+# Type Classes
 
 ---
-
-```scala
-//: src/scala/Inheritance.scala
-package inheritance
-
-trait Base:
-    def consume(): Unit
-    def communicate(): Unit
-
-class Dog extends Base:
-    def consume() = println("eating dog food")
-    def communicate() = println("woof")
-
-class Person extends Base:
-    def consume() = println("eating pizza")
-    def communicate() = println("hello")
-```
----
-```scala
-class Robot extends Base:
-    def consume() = println("charging")
-    def communicate() = println("operational")
-
-class Slug extends Base:
-    def consume() = println("eating grass")
-    def communicate() = {}
-
-def nourish(x: Base): Unit =
-    x.consume()
-    x.communicate()
-
-@main def main() =
-    List(Dog(), Person(), Robot(), Slug()).foreach(nourish(_))
-```
-------
-
-Cannot locate C:\Git\PolymorphismUnbound\src\scala\EnumTypes.scala
-Cannot locate C:\Git\PolymorphismUnbound\src\scala\EnumTypes2.scala
-```scala
-//: src/scala/AlgebraicDataTypes.scala
-package adts
-import ADT.*
-
-enum ADT(eat: String, talk: String):
-    case Dog(says: String) extends ADT("eating dog food", says)
-    case Person(says: String) extends ADT("eating pizza", says)
-    case Robot extends ADT("charging", "operational")
-    case Slug extends ADT("eating grass", "")
-    def consume() = println(eat)
-    def communicate() = println(talk)
-```
----
-```scala
-def nourish(x: ADT): Unit =
-    x.consume()
-    x.communicate()
-
-@main def main() =
-    List(Dog("woof"), Person("hi!"), Robot, Slug).foreach(nourish(_))
-```
-------
-
-```scala
-//: src/scala/DisjointTypes.scala
-// Nothing in commont
-package disjointtypes
-
-class Dog:
-    def eat() = println("eating dog food")
-    def bark() = println("woof")
-
-class Person:
-    def scarf() = println("eating pizza")
-    def talk() = println("hello")
-
-class Robot:
-    def charge() = println("charging")
-    def communicate() = println("operational")
-
-class Slug:
-    def absorb() = println("eating grass")
-```
-------
-
-```scala
-//: src/scala/UnionTypes.scala
-// Union types aka sum types
-package uniontypes
-import disjointtypes.*
-
-// 'x' is a union type:
-def nourish(x: Dog | Person | Robot | Slug) = x match
-    case d: Dog =>
-        d.eat()
-        d.bark()
-    case p: Person =>
-        p.scarf()
-        p.talk()
-    case r: Robot =>
-        r.charge()
-        r.communicate()
-    case s: Slug =>
-        s.absorb()
-
-@main def main() =
-    val list: List[Dog | Person | Robot | Slug] =
-        List(Dog(), Person(), Robot(), Slug())
-    list.foreach(nourish(_))
-```
-------
 
 ```scala
 //: src/scala/TypeClasses.scala
@@ -1048,56 +1332,6 @@ def nourish2[T: Update](x: T): Unit =
 ```
 ------
 
-
-# Rust
-
----
-
-```rs
-//: src/rust/inheritance/src/main.rs
-
-trait Base {
-  fn eat(&self);
-  fn speak(&self);
-}
-
-struct Dog;
-struct Person;
-struct Robot;
-struct Slug;
-
-impl Base for Dog {
-  fn eat(&self) { println!("eating dog food"); }
-  fn speak(&self) { println!("woof"); }
-}
-
-impl Base for Person {
-  fn eat(&self) { println!("eating pizza"); }
-  fn speak(&self) { println!("hello"); }
-}
-```
----
-```rs
-impl Base for Robot {
-  fn eat(&self) { println!("charging"); }
-  fn speak(&self) { println!("operational"); }
-}
-
-impl Base for Slug {
-  fn eat(&self) { println!("eating grass"); }
-  fn speak(&self) {}
-}
-
-fn main() {
-  let v: Vec<&dyn Base> = vec![&Dog{}, &Person{}, &Robot{}, &Slug{}];
-  for d in v.iter() {
-    d.eat();
-    d.speak();
-  }
-}
-```
-------
-
 ```rs
 //: src/rust/typeclasses/src/main.rs
 
@@ -1142,117 +1376,6 @@ pub fn poly<T: Communicate>(x: &T) {
 fn main() {
     poly(&Dog {});
     poly(&Person {});
-}
-```
-------
-
-
-# Go
-
----
-
-```go
-//: src/golang/structural/structural.go
-package main
-
-type Dog struct{}
-
-func (dog Dog) Consume()     { println("eating dog food") }
-func (dog Dog) Communicate() { println("woof") }
-
-type Person struct{}
-
-func (person Person) Consume()     { println("eating pizza") }
-func (person Person) Communicate() { println("hello") }
-```
----
-```go
-type Robot struct{}
-
-func (robot Robot) Consume()     { println("charging") }
-func (robot Robot) Communicate() { println("operational") }
-
-type Slug struct{}
-
-func (slug Slug) Consume()     { println("eating grass") }
-func (slug Slug) Communicate() {}
-```
----
-```go
-type ConsumerCommunicator interface {
-    Consume()
-    Communicate()
-}
-
-func Poly(x ConsumerCommunicator) {
-    x.Consume()
-    x.Communicate()
-}
-
-func main() {
-    subjects := []ConsumerCommunicator{
-        Dog{}, Person{}, Robot{}, Slug{},
-    }
-    for _, subject := range subjects {
-        Poly(subject)
-    }
-}
-```
-------
-
-```go
-//: src/golang/generic/generics.go
-package main
-
-type Dog struct{}
-
-func (dog Dog) Eat()  { println("eating dog food") }
-func (dog Dog) Bark() { println("woof") }
-
-type Person struct{}
-
-func (person Person) Eat()   { println("eating pizza") }
-func (person Person) Greet() { println("hello") }
-```
----
-```go
-type Robot struct{}
-
-func (robot Robot) Eat()      { println("charging") }
-func (robot Robot) Initiate() { println("operational") }
-
-type Slug struct{}
-
-func (slug Slug) Eat() { println("eating grass") }
-```
----
-```go
-type Eater interface {
-    Eat()
-}
-
-func Poly[T Dog | Person | Robot | Slug](subject T) {
-    switch subjectTyped := any(subject).(type) {
-    case Eater:
-        subjectTyped.Eat()
-    }
-    switch subjectTyped := any(subject).(type) {
-    case Dog:
-        subjectTyped.Bark()
-    case Person:
-        subjectTyped.Greet()
-    case Robot:
-        subjectTyped.Initiate()
-    }
-}
-```
----
-```go
-func main() {
-    Poly(Dog{})
-    Poly(Person{})
-    Poly(Robot{})
-    Poly(Slug{})
 }
 ```
 ------
